force-app/main/W-001393-Recall/objects/Recall_Model__c/Recall_Model__c.object-meta.xml
<CustomObject>
    <label>Recall Model</label>
    <nameField>
        <displayFormat>MODEL-{0000000}</displayFormat>
        <label>REF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recall Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>