force-app/main/W-001393-Recall/objects/Recall_Model__c/fields/Factory_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Factory_Model_Number__c</fullName>
    <description>Product Code</description>
    <inlineHelpText>Product Code</inlineHelpText>
    <label>Factory Model Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>