force-app/main/W-001393-Recall/objects/Recall_Model__c/fields/Item_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Item_Serial_Numbers__c</fullName>
    <label>Item Serial Numbers</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>