force-app/main/W-001393-Recall/objects/Recall_Model__c/fields/Recall__c.field-meta.xml
<CustomField>
    <fullName>Recall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recall</label>
    <referenceTo>Recall__c</referenceTo>
    <relationshipName>Recall_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>