force-app/main/W-001393-Recall/objects/Recall_Model__c/fields/Recall_Account__c.field-meta.xml
<CustomField>
    <fullName>Recall_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recall Account</label>
    <referenceTo>Recall_Account__c</referenceTo>
    <relationshipLabel>Recall Models</relationshipLabel>
    <relationshipName>Recall_Models</relationshipName>
    <type>Lookup</type>
</CustomField>